# Rustlang-botnet

./: Cargo.toml  README.md  r.bat
src/: clientstruct.rs  dbtools.rs  main.rs  zombiestruct.rs
