[package]
name = "yavsak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clearscreen = "2.0.1"
paris = { version = "1.5", features = ["timestamps","macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.115"
tokio = { version = "*", features = ["full"]}
base64 = "0.22.1"
soft-aes = "0.2.0"
serde = { version = "1.0.148", features = ["derive"] }
futures = "0.3"
mongodb = "*"
url = "2.5.0"
tokio-tungstenite = "*"
futures-util = "0.3.30"
once_cell = "1.19.0"
